# token-maxxing

./: .gitignore  README.md  package.json
.github/workflows/: release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  tailer.rs
ui/: index.html  main.js  style.css
